--- a/store/index.html
+++ b/store/index.html
@@ -6,6 +6,8 @@
     <title>Ejericio de Store</title>
 </head>
 <body>
-    <script src="js/index.js"></script>
+    <!-- <script src="js/index.js"></script> -->
+    <!-- <script src="js/products.js"></script> -->
+    <script src="js/lenghtOf.js"></script>
 </body>
 </html>
