--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,8 @@
     <title>Ejericio Title Format</title>
 </head>
 <body>
-    <script src="js/titleFormat.js"></script>
+    <!-- <script src="js/titleFormat.js"></script> -->
+    <!-- <script src="js/stringIncludes.js"></script> -->
+    <script src="js/palindrome.js"></script>
 </body>
 </html>
