Completando lo del dia de hoy

--- a/store/index.html
+++ b/store/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- <script src="js/index.js"></script> -->
-    <!-- <script src="js/products.js"></script> -->
-    <script src="js/lenghtOf.js"></script>
+    <script src="js/products.js"></script>
+    <!-- <script src="js/lenghtOf.js"></script> -->
 </body>
 </html>
