--- a/calculador/index.html
+++ b/calculador/index.html
@@ -6,6 +6,7 @@
     <title>Calculador</title>
 </head>
 <body>
-    <script src="scripts/index.js"></script>
+    <!-- <script src="scripts/index.js"></script> -->
+    <script src="scripts/calculator.js"></script>
 </body>
 </html>
