--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="js/titleFormat.js"></script> -->
     <!-- <script src="js/stringIncludes.js"></script> -->
-    <script src="js/palindrome.js"></script>
+    <!-- <script src="js/palindrome.js"></script> -->
+    <script src="js/math.js"></script>
 </body>
 </html>
